font problem fixed on safari - issue was the firefox focus content blocker - troubleshooting layout issues

--- a/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
+++ b/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
@@ -21,10 +21,11 @@
 @media screen and (min-width: 20em) {
   .cheat-sheet-flexbox-container {
     height: calc(100vh - var(--header-mobile-height));
+    width: 100vw;
   }
   .cheat-sheet-container {
-    height: calc(100vh - var(--header-mobile-height));
-    width: 100vw;
+    height: 100%;
+    width: 100%;
   }
   .cheat-sheet-title-options {
     display: flex;
